--- a/src/styles/partials/_navbar.scss
+++ b/src/styles/partials/_navbar.scss
@@ -6,6 +6,10 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
+    z-index: 998;
+    position: fixed;
+    width: 100%;
+    top: 0;
     .logo{
         font-size: 1.2em;
         font-weight: bolder;
@@ -100,6 +104,7 @@
     background-color: var(--background-color);
     box-shadow: 0 0 0 1000px rgba(0, 0, 0, 0.2), 3px 0 5px var(--shadow-color);
     animation: getAnimationDuration(.5s) slideInLeft;
+    z-index: 999;
     .sidebar-link {
         display: block;
         padding: .5em 1em;
