--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -68,6 +68,9 @@ body {
     align-items: center;
     margin-bottom: 4vw;
     flex-wrap: wrap;
+    &.d-block {
+        display: block;
+    }
     .col {
         width: 50%;
     }
@@ -91,31 +94,9 @@ body {
 @import "./partials/improv-section.scss";
 @import "./partials/quote.scss";
 @import "./partials/chiefs.scss";
-
-.previous-searches {
-    display: block;
-    h2 {
-        color: var(--text-color);
-        font-size: 1.5em;
-        font-weight: 900;
-        margin-bottom: .5em;
-    }
-
-    .previous-searches-container{
-
-        .search-items{
-            background-color: var(--primary-color);
-            display: inline-block;
-            padding: .5em 1em;
-            margin: 0 1em 1em 0;
-            color: #ffffff;
-            border-radius: 30px;
-            box-shadow: 0 3px 6px var(--shadow-color);
-            cursor: pointer;
-            animation: getAnimationDuration(.5s) slideInRight forwards; 
-        }
-    }
-}
+@import "./partials/previous_searches";
+@import "./partials/recipe.scss";
+@import "./partials/settings";
 
 @import "./partials/footer.scss";
 
