--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -31,6 +31,7 @@ body {
     font-size: var(--font-size);
     font-family: 'Roboto', sans-serif;
     padding-top: 55px;
+    background-color: var(--background-light);
 }
 
 .btn {
